--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="OsZNXLpHFXPODOXINTTWbpLD8QojjZ5JQv8jeEnKwTo" />
-    <title>Varun - LinkTree</title>
+    <title>Varun Aditya - LinkTree</title>
     <!-- Import Poppins and Special Elite Fonts from Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Special+Elite&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
@@ -173,3 +173,27 @@
     </script>
 </body>
 </html>
+
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
+/* additional code lines */
